# Huishouden-app

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  PROJECT_SPEC.md  README.md  WEEKMENU_BUILD.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 11562a5d1545_weekmenu_servings.py  1a1c3b781746_shopping_list_quantity.py  5d1c31929dab_ingredient_in_stock.py  6cd07a71283d_security_is_benchmark.py  788b69c8db41_backfill_pantry_type_voorraadkast.py  81b07145275e_weekmenu_schema.py  835d05468274_recipe_categories_many_to_many.py  9e4b2c8f5a17_budget_notes.py  a4c1e7b2d9f0_transactions_effective_date.py  a7f3c2d1e9b0_loan_woning.py  a9d2f5c7b3e1_canonicaliseer_ingredienten_en_kruiden.py  b3f7d1a9c4e2_forecast_notes.py  b4e8d6c3f2a1_investment_comment.py  b7e2f1a3c8d4_security_tx_precise_amounts.py  c3d5a9f21e77_security_splits.py  c7a1f4e9b2d3_recipe_moments_many_to_many.py  c8e1a3f7b6d2_month_notes.py  c9d2e5f4a3b7_rule_contexts_cleanup.py  d4e9a1c6f3b2_security_day_change_pct.py  d8b3f0a7c1e2_security_soort.py  defd059dcd0f_initieel_schema.py  e1f6a8d4b2c9_forecast_formulas.py  f2a9c4e6b8d1_rule_contexts.py  f3b6c1d8e4a2_recipe_ingredient_display_name.py
backend/app/: config.py  database.py  main.py  seed.py  types.py
backend/app/auth/: deps.py  passwords.py  rate_limit.py  sessions.py
backend/app/models/: __init__.py  base.py  budget.py  core.py  enums.py  forecast.py  investments.py  loans.py  month_note.py  snapshots.py  transactions.py
backend/app/routes/: accounts.py  auth.py  budgets.py  categories.py  contexts.py  dashboard.py  forecast.py  (+8 more)
backend/tests/: conftest.py  csv_fixtures.py  test_account_status.py  test_accounts_routes.py  test_auth.py  test_bank_import.py  test_budgets.py  test_categories.py  test_csv_parsers.py  test_dashboard.py  test_dashboard_notes.py  test_excel_import.py  test_forecast.py  test_forecast_formula.py  test_import_categorization.py  test_investments.py  test_investments_import.py  test_loans.py  test_money_types.py  test_net_worth.py  test_prices.py  test_rules.py  test_rules_routes.py  test_securities_routes.py  test_seed.py  test_ticker_suggest.py  test_transactions.py  test_weekmenu_attributes.py  test_weekmenu_ingredient_categorization.py  test_weekmenu_ingredient_names.py  test_weekmenu_ingredients.py  test_weekmenu_parse.py  test_weekmenu_photos_route.py  test_weekmenu_recipes.py  test_weekmenu_recipes_crud.py  test_weekmenu_router.py  test_weekmenu_schema.py  test_weekmenu_servings.py  test_weekmenu_shopping_list.py  test_weekmenu_url_security.py  (+1 more)
(+118 files in other folders)
