[project]
name = "huishouden-backend"
version = "0.1.0"
description = "Backend van de Huishouden-app (persoonlijke financiën, Simon & Jozefien)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "argon2-cffi>=23.1",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.9",
    "yfinance>=0.2.40",  # koersen-fetch (spec §7), uitschakelbaar via price_fetch_enabled
    "httpx>=0.27",  # weekmenu: HTML/foto-fetch met SSRF-guard (url_security.py)
    "recipe-scrapers>=15.0",  # weekmenu: schema.org-receptparser
    "beautifulsoup4>=4.12",  # weekmenu: HTML → tekst voor de Claude-fallback
    "anthropic>=0.40",  # weekmenu: Claude API (URL-fallback + vision), server-side
    "pypdf>=4.0",  # weekmenu: tekst uit PDF-recepten
    "python-docx>=1.1",  # weekmenu: tekst uit Word-recepten (.docx)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "openpyxl>=3.1",  # voor de excel_import-tests
]
migrate = [
    "openpyxl>=3.1",  # enkel nodig voor scripts/import_excel.py
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]  # autogegenereerde migraties niet linten

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
